Expand position-area CB to include in-flow scrollable area for ICB https://bugs.webkit.org/show_bug.cgi?id=299950 rdar://161741583

Reviewed by Alan Baradlay.

This is not a complete fix for the spec requirement to cover the scrollable
area of scrollable containing blocks, but it fixes the most problematic case:
typical overflow of the initial containing block.

See https://bugs.webkit.org/show_bug.cgi?id=291864 for more complete follow-up.

Tests: imported/w3c/web-platform-tests/css/css-anchor-position/position-area-overflow-icb-001.html
       imported/w3c/web-platform-tests/css/css-anchor-position/position-area-overflow-icb-002.html
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-area-overflow-icb-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-area-overflow-icb-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-area-overflow-icb-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-area-overflow-icb-002.html: Added.

Add some basic reftests for this case.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-area-scrolling-003.tentative-expected.txt:

Mark test as failing. The test is wrong in any case, but also not worth fixing
until we have a more complete fix for this issue.

* Source/WebCore/rendering/PositionedLayoutConstraints.cpp:
(WebCore::PositionedLayoutConstraints::captureScrollableArea):
* Source/WebCore/rendering/PositionedLayoutConstraints.h:

Expand the position-area ICB to cover the area of an in-flow root element.

Canonical link: https://commits.webkit.org/300921@main